# PDR

ROS/P1/Enunciado/servicio_suma/src/: add_two_ints_client.py  add_two_ints_server.py
ROS/P1/__MACOSX/Enunciado/: ._servicio_suma
ROS/P1/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ROS/P1/catkin_ws/devel/include/servicio_suma/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
ROS/P1/catkin_ws/devel/lib/pkgconfig/: servicio_suma.pc
ROS/P1/catkin_ws/devel/lib/python3/dist-packages/servicio_suma/srv/: _AddTwoInts.py
ROS/P1/catkin_ws/devel/share/common-lisp/ros/servicio_suma/srv/: AddTwoInts.lisp  _package.lisp  _package_AddTwoInts.lisp  servicio_suma-srv.asd
ROS/P1/catkin_ws/devel/share/gennodejs/ros/servicio_suma/srv/: AddTwoInts.js
ROS/P1/catkin_ws/devel/share/roseus/ros/servicio_suma/: manifest.l
ROS/P1/catkin_ws/devel/share/roseus/ros/servicio_suma/srv/: AddTwoInts.l
ROS/P1/catkin_ws/devel/share/servicio_suma/cmake/: servicio_suma-msg-extras.cmake  servicio_suma-msg-paths.cmake  servicio_sumaConfig.cmake
ROS/P1/catkin_ws/src/servicio_suma/: CMakeLists.txt  package.xml
ROS/P1/catkin_ws/src/servicio_suma/src/: .add_three_ints_client.py.swp  .add_three_ints_server.py.swp  add_three_ints_client.py  add_three_ints_server.py  add_two_ints_client.py  add_two_ints_server.py
ROS/P1/catkin_ws/src/servicio_suma/srv/: .AddThreeInts.srv.swp
ROS/P2/catkin_ws/devel/: local_setup.sh
ROS/P2/catkin_ws/devel/lib/pkgconfig/: p2pkg.pc
ROS/P2/catkin_ws/devel/lib/python3/dist-packages/p2pkg/msg/: _miMensajeEjercicio.py
ROS/P2/catkin_ws/devel/lib/python3/dist-packages/primer_paquete/msg/: __init__.py  _miMensaje.py
ROS/P2/catkin_ws/devel/share/common-lisp/ros/p2pkg/msg/: _package_miMensajeEjercicio.lisp
ROS/P2/catkin_ws/devel/share/common-lisp/ros/primer_paquete/msg/: _package.lisp  _package_miMensaje.lisp  primer_paquete-msg.asd
ROS/P2/catkin_ws/devel/share/gennodejs/ros/p2pkg/msg/: _index.js  miMensajeEjercicio.js
ROS/P2/catkin_ws/devel/share/gennodejs/ros/primer_paquete/msg/: miMensaje.js
ROS/P2/catkin_ws/devel/share/primer_paquete/cmake/: primer_paquete-msg-paths.cmake
ROS/P2/catkin_ws/devel/share/roseus/ros/p2pkg/msg/: miMensajeEjercicio.l
ROS/P2/catkin_ws/devel/share/roseus/ros/primer_paquete/msg/: miMensaje.l
ROS/P2/catkin_ws/src/p2pkg/: CMakeLists.txt
ROS/P2/catkin_ws/src/p2pkg/launch/: launch_ejercicio3.launch  launch_ejercicio4.launch
ROS/P2/catkin_ws/src/p2pkg/src/: nodosub_ejercicio2.py
ROS/P2/catkin_ws/src/primer_paquete/msg/: miMensaje.msg
ROS/P2/catkin_ws/src/primer_paquete/src/: nodo_envia.py
ROS/P3/ejercicio3_src/turtle_tf_3d/: package.xml
ROS/P3/ejercicio3_src/turtle_tf_3d/exercises_scripts/: turtle_broadcaster_test.py  turtles_and_coke_publisher_tf.py
ROS/P3/ejercicio3_src/turtle_tf_3d/launch/: main.launch  spawn_sdf copy.launch  spawn_turtles.launch
ROS/P3/ejercicio3_src/turtle_tf_3d/models/turtle1/: model.config  model.sdf
ROS/P3/ejercicio3_src/turtle_tf_3d/models/turtle2/: model.sdf
ROS/P3/ejercicio3_src/turtle_tf_3d/scripts/: turtle_tf_broadcaster.py  turtle_tf_listener.py  turtle_twist_keyboard.py
ROS/P3/ejercicio3_src/turtle_tf_3d/src/turtle_tf_3d/: get_model_gazebo_pose.py  move_generic_model.py
ROS/P3/ejercicio3_src/turtle_tf_3d/worlds/: empty.world
ROS/catkin_ws/devel/: .catkin  setup.sh
ROS/catkin_ws/devel/include/p2pkg/: miMensajeEjercicio.h
ROS/catkin_ws/devel/include/primer_paquete/: miMensaje.h
ROS/catkin_ws/devel/lib/p2pkg/: nodosub_ejercicio2.py
ROS/catkin_ws/devel/lib/pkgconfig/: primer_paquete.pc
ROS/catkin_ws/devel/lib/python3/dist-packages/p2pkg/msg/: __init__.py
ROS/catkin_ws/devel/share/common-lisp/ros/p2pkg/msg/: _package.lisp  miMensajeEjercicio.lisp  p2pkg-msg.asd
ROS/catkin_ws/devel/share/common-lisp/ros/primer_paquete/msg/: miMensaje.lisp
ROS/catkin_ws/devel/share/gennodejs/ros/primer_paquete/msg/: _index.js
ROS/catkin_ws/devel/share/p2pkg/cmake/: p2pkg-msg-extras.cmake  p2pkg-msg-paths.cmake  p2pkgConfig.cmake
ROS/catkin_ws/devel/share/primer_paquete/cmake/: primer_paqueteConfig.cmake
ROS/catkin_ws/devel/share/roseus/ros/p2pkg/: manifest.l
ROS/catkin_ws/devel/share/roseus/ros/primer_paquete/: manifest.l
ROS/catkin_ws/src/p2pkg/msg/: miMensajeEjercicio.msg
ROS/catkin_ws/src/primer_paquete/: CMakeLists.txt
ROS/catkin_ws/src/primer_paquete/src/: nodo_recibe.py
