<?xml version="1.0"?>
<package>
  <name>turtle_tf_3d</name>
  <version>1.0.0</version>
  <description>The turtle_tf_3d package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="duckfrost@theconstructsim.com">user</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>By TheConstructSim</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>spawn_robot_tools_pkg</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>spawn_robot_tools_pkg</run_depend>


  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>


</package>